[package]
name = "portmole"
version = "1.0.0"
edition = "2021"
authors = [
    "Johan Planchon <dev@planchon.xyz>"
]
license = "MIT"
description = "Client and server to discover filtered TCP and UDP ports on a network"

[dependencies]
# Cli
clap = { version = "^3.1", features = ["derive"] }

# IO & Async
tokio = { version = "^1.17", features = ["net", "rt-multi-thread", "time"] }
futures = "^0.3"
trust-dns-resolver = "^0.20"

# Logging
simple_logger = "^2.1"
log = "^0.4"

# Errors handling
eyre = "^0.6"
color-eyre = "^0.5"
